Bug fix: unlock not showing in roster user menu

--- a/imascore.css
+++ b/imascore.css
@@ -1211,10 +1211,11 @@ iframe.scaleresponsive { transform-origin: 0 0; }
 
 .greystrike {
 	text-decoration: line-through;
-	opacity: .6;
+	color: #757575;
 }
-.greystrike.a {
-
+.greystrike a {
+	color: revert;
+	opacity: 0.8;
 }
 .altContentOff {
 	display:none;
